@@ -266,6 +266,8 @@ timeused=`        grep '^time-used: '    program.meta | sed 's/time-used: //'`
 program_cputime=` grep '^cpu-time: '     program.meta | sed 's/cpu-time: //'`
 program_walltime=`grep '^wall-time: '    program.meta | sed 's/wall-time: //'`
 program_exit=`    grep '^exitcode: '     program.meta | sed 's/exitcode: //'`
+program_stdout=`  grep '^stdout-bytes: ' program.meta | sed 's/stdout-bytes: //'`
+program_stderr=`  grep '^stderr-bytes: ' program.meta | sed 's/stderr-bytes: //'`
 memory_bytes=`    grep '^memory-bytes: ' program.meta | sed 's/memory-bytes: //'`
 resourceinfo="\
 runtime: ${program_cputime}s cpu, ${program_walltime}s wall
@@ -279,6 +281,12 @@ if [ "$program_exit" != "0" ]; then
 	echo "Non-zero exitcode $program_exit" >>system.out
 	echo "$resourceinfo" >>system.out
 	cleanexit ${E_RUN_ERROR:-1}
+fi
+
+if grep '^output-truncated: ([a-z]+,)*stdout(,[a-z]+)*' program.meta >/dev/null 2>&1 ; then
+	echo "Output limit exceeded: $program_stdout > $((FILELIMIT*1024))" >>system.out
+	echo "$resourceinfo" >>system.out
+	cleanexit ${E_OUTPUT_LIMIT:-1}
 fi
 
 if [ $exitcode -eq 42 ]; then
